--- a/access-beta.html
+++ b/access-beta.html
@@ -37,6 +37,7 @@
                 <button id="softwareBtn">Software Update</button>
                 <button id="devBtn">Developer</button>
             </div>
+            <button class="exit-btn">Exit</button>
         </div>
     </div>
 
@@ -63,6 +64,21 @@
                 <td>Proxy:</td><td>Unreleased</td>
             </tr>
         </table>
+        <button class="back-btn">Back</button>
+    </div>
+
+    <!-- Software Update Popup (initially hidden) -->
+    <div id="softwareContent" class="popup hidden">
+        <h2>Software Update</h2>
+        <h4>A3X</h4>
+        <p>Software is up to date.</p>
+        <button class="back-btn">Back</button>
+    </div>
+
+    <!-- Developer Popup (initially hidden) -->
+    <div id="developerContent" class="popup hidden">
+        <h2>Developer</h2>
+        <p>You are not a developer nor eligible to become one. Insider Program will open soon.</p>
         <button class="back-btn">Back</button>
     </div>
 
