--- a/access-beta.html
+++ b/access-beta.html
@@ -25,7 +25,7 @@
 
     <!-- Main Content -->
     <div class="content">
-        <p id="errorMsg" class="hidden">You must enter a search query or URL</p>
+        <p id="errorMsg" class="hidden">You must enter a search query or URL...</p>
     </div>
 
     <!-- General Menu -->
