--- a/access-beta.html
+++ b/access-beta.html
@@ -30,7 +30,7 @@
 
     <!-- General Menu -->
     <div id="generalMenu" class="general-menu hidden">
-        <div class="general-menu-content">
+        <div class="general-menu hidden">
             <button class="close-btn">X</button>
             <div class="general-buttons">
                 <button id="aboutBtn">About</button>
