--- a/access-beta.html
+++ b/access-beta.html
@@ -25,12 +25,12 @@
 
     <!-- Main Content -->
     <div class="content">
-        <p id="errorMsg" class="hidden">You must enter a search query or URL...</p>
+        <p id="errorMsg" class="hidden">You must enter a search query or URL</p>
     </div>
 
-    <!-- General Menu -->
+    <!-- General Menu (hidden by default) -->
     <div id="generalMenu" class="general-menu hidden">
-        <div class="general-menu hidden">
+        <div class="general-menu-content">
             <button class="close-btn">X</button>
             <div class="general-buttons">
                 <button id="aboutBtn">About</button>
@@ -71,7 +71,7 @@
     <div id="softwareContent" class="popup hidden">
         <h2>Software Update</h2>
         <h4>A3X</h4>
-        <p>Software is up to date.</p>
+        <p>You are up to date</p>
         <button class="back-btn">Back</button>
     </div>
 
