--- a/index.html
+++ b/index.html
@@ -131,10 +131,8 @@
         </div>
     </div>
 
-    <button onclick="window.location.href='access-beta.html'" style="margin-top: 20px;">Access - Beta</button>
-
     <h2 style="color: white;">Up To Date</h2>
-    <h3 style="color: white;">v2024.9</h3>
+    <h3 style="color: white;">v2024.9f</h3>
 
     <script src="script.js"></script>
 </body>
