--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=480, initial-scale=1.0">
+    <meta name="viewport" content="width=1280, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Unblocked V2</title>
     <style>
@@ -35,7 +35,10 @@
 <body>
     <div class="container">
         <h1>About</h1>
-        <p>Engine: A3X</p>
+        <p>Engine: A9</p>
+        <p>Bit Type: 16-bits</p>
+        <p>L1 Cache: 2 KB</p>
+        <p>L2 Cache: 1 KB</p>
         <p>Trust Mobile Version: 16</p>
         <p>Trust Computer Version: 22</p>
         <p>HTML Version: 5</p>
