--- a/about.html
+++ b/about.html
@@ -30,20 +30,34 @@
             font-size: 18px;
             margin: 5px 0;
         }
+        .button {
+            margin-top: 20px;
+        }
+        a {
+            text-decoration: none;
+            background-color: #007BFF;
+            color: white;
+            padding: 10px 20px;
+            border-radius: 5px;
+            font-size: 16px;
+        }
+        a:hover {
+            background-color: #0056b3;
+        }
     </style>
 </head>
 <body>
     <div class="container">
         <h1>About</h1>
         <p>Engine: A9</p>
-        <p>Bit Type: 16-bits</p>
-        <p>L1 Cache: 2 KB</p>
-        <p>L2 Cache: 1 KB</p>
         <p>Trust Mobile Version: 16</p>
         <p>Trust Computer Version: 22</p>
         <p>HTML Version: 5</p>
         <p>NodeJS Version: 8.0</p>
         <p>Proxy: Unreleased</p>
+        <div class="button">
+            <a href="fl-test.html">Devkit</a>
+        </div>
     </div>
 </body>
 </html>
