--- a/fl-test.html
+++ b/fl-test.html
@@ -5,21 +5,175 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Unblocked V2</title>
-    <link rel="stylesheet" href="/main.css">
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.2.0/css/all.css">
-    <script>
-        function redirectToRandomSite() {
-            const urls = [
-                "https://unblockedv2.vercel.app/",
-            ];
-            const randomIndex = Math.floor(Math.random() * urls.length);
-            window.location.href = urls[randomIndex];
+    <link rel="stylesheet" href="/main.css">
+    <style>
+        body {
+            font-family: 'Poppins', sans-serif;
+            margin: 0;
+            padding: 0;
+            background: linear-gradient(135deg, #6a11cb 0%, #2575fc 100%);
+            background-size: 400% 400%;
+            animation: gradientMove 10s ease infinite;
+            color: white;
+            overflow-x: hidden;
         }
-    </script>
+
+        @keyframes gradientMove {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
+        }
+
+        nav {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 20px;
+            background: rgba(0, 0, 0, 0.4);
+        }
+
+        nav img {
+            width: 50px;
+            cursor: pointer;
+        }
+
+        nav h1 {
+            margin: 0;
+            font-size: 2rem;
+            letter-spacing: 1px;
+        }
+
+        .featured {
+            padding: 20px;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
+        }
+
+        .featured h1 {
+            width: 100%;
+            text-align: center;
+            font-size: 2.5rem;
+            margin-bottom: 20px;
+            color: #fff;
+        }
+
+        .column, .row {
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+        }
+
+        .column a, .row a {
+            position: relative;
+            width: 250px;
+            overflow: hidden;
+            border-radius: 15px;
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+            transition: transform 0.4s;
+        }
+
+        .column a img, .row a img {
+            width: 100%;
+            border-radius: 15px;
+            transition: transform 0.4s ease;
+        }
+
+        .column a:hover img, .row a:hover img {
+            transform: scale(1.1);
+        }
+
+        .play-button {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            color: white;
+            font-size: 2rem;
+            display: none;
+        }
+
+        a:hover .play-button {
+            display: block;
+        }
+
+        /* Search bar styling */
+        .search {
+            width: 100%;
+            text-align: center;
+            margin: 40px 0;
+        }
+
+        .search input {
+            width: 60%;
+            padding: 10px;
+            border: none;
+            border-radius: 50px;
+            background: rgba(255, 255, 255, 0.2);
+            outline: none;
+            color: #fff;
+            font-size: 1.2rem;
+            transition: width 0.5s ease;
+        }
+
+        .search input:focus {
+            width: 80%;
+        }
+
+        .search button {
+            padding: 12px 18px;
+            border-radius: 50%;
+            border: none;
+            background-color: #fff;
+            color: #6a11cb;
+            margin-left: -40px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        .search button:hover {
+            background-color: #2575fc;
+        }
+
+        .content {
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            gap: 20px;
+        }
+
+        .content a {
+            position: relative;
+            width: 150px;
+            border-radius: 10px;
+            overflow: hidden;
+            transition: all 0.3s ease-in-out;
+        }
+
+        .content a img {
+            width: 100%;
+            border-radius: 10px;
+            transition: transform 0.4s ease;
+        }
+
+        .content a:hover img {
+            transform: scale(1.05);
+        }
+
+        .content a:hover .play-button {
+            display: block;
+        }
+
+        .content h2 {
+            color: white;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
     <nav>
-        <img src="images/icon.png" alt="logo" onclick="redirectToRandomSite()" style="cursor: pointer;">
+        <img src="images/icon.png" alt="logo" onclick="redirectToRandomSite()">
         <h1>Unblocked V2 Devkit [TestSite]</h1>
     </nav>
 
@@ -39,100 +193,27 @@
                 </div>
             </a>
         </div>
-        <div class="row">
-            <a href="games/vex6/">
-                <img src="images/vex6.jpeg" alt="Vex 6">
-                <div class="play-button">
-                    <i class="fa-solid fa-play"></i>
-                </div>
-            </a>
-        </div>
-        <div class="row">
-            <a href="games/drive-mad/">
-                <img src="images/drive-mad.jpg" alt="Drive Mad">
-                <div class="play-button">
-                    <i class="fa-solid fa-play"></i>
-                </div>
-            </a>
-        </div>
-        <div class="column">
-            <a href="games/moto-x3m/">
-                <img src="images/moto-x3m.jpg" alt="Moto X3M">
-                <div class="play-button">
-                    <i class="fa-solid fa-play"></i>
-                </div>
-            </a>
-            <a href="games/retro-bowl/">
-                <img src="images/retro-bowl.jpg" alt="Retro Bowl">
-                <div class="play-button">
-                    <i class="fa-solid fa-play"></i>
-                </div>
-            </a>
-        </div>
+        <!-- Add more games here -->
     </div>
 
     <div class="content">
-        <hr>
-
         <div class="search">
-            <input type="text" placeholder="Search..." oninput="">
+            <input type="text" placeholder="Search...">
             <button><i class="fas fa-search"></i></button>
         </div>
 
         <div id="games">
             <a href="games/bob-the-robber-2/"><img src="images/bob-the-robber-2.png" alt="bob the robber 2"></a>
-        <a href="games/vex7/"><img src="images/vex7.jpeg" alt="vex 7"></a>
-        <a href="games/vex6/"><img src="images/vex6.jpeg" alt="vex 6"></a>
-        <a href="games/moto-x3m/"><img src="images/moto-x3m.jpg" alt="moto x3m"></a>
-        <a href="games/retro-bowl/"><img src="images/retro-bowl.jpg" alt="retrobowl"></a>
-        <a href="games/drive-mad/"><img src="images/drive-mad.jpg" alt="drive mad"></a>
-        <a href="games/slope/"><img src="images/slope.jpg" alt="slope"></a>
-        <a href="games/motox3m2/"><img src="images/motox3m2.jpg" alt="moto x3m2"></a>
-        <a href="games/1v1lol/"><img src="images/1v1icon.png" alt="1v1 lol"></a>
-        <a href="games/a-dance-of-fire-and-ice/"><img src="images/adofai.png" alt="a dance of fire and ice"></a>
-        <a href="games/amongus/"><img src="images/auicon.png" alt="among us"></a>
-        <a href="games/backrooms/"><img src="images/backrooms.png" alt="backrooms"></a>
-        <a href="games/badicecream2/"><img src="images/badice2.png" alt="bad ice cream 2"></a>
-        <a href="games/baldisbasics/"><img src="images/baldi.png" alt="baldis basics"></a>
-        <a href="games/basketballstars/"><img src="images/basketballstars.png" alt="basketball stars"></a>
-        <a href="games/basketbrosio/"><img src="images/basketbros.png" alt="basketbros.io"></a>
-        <a href="games/2048/"><img src="images/2048.png" alt="2048"></a>
-        <a href="games/bitlife/"><img src="images/bitlife.png" alt="bitlife"></a>
-        <a href="games/worldshardestgame/"><img src="images/worldhardestgame.png" alt="world's hardest game"></a>
-        <a href="games/worldshardestgame2/"><img src="images/worldshardestgame2.png" alt="world's hardest game 2"></a>
-        <a href="games/slope2/"><img src="images/slope21.png" alt="slope 2"></a>
-        <a href="games/sm64/"><img src="images/sm64.png" alt="super mario 64"></a>
-        <a href="games/stickman-hook/"><img src="images/stickmanhook.png" alt="stickman hook"></a>
-        <a href="games/minecraft-18/"><img src="images/minecraft.png" alt="minecraft"></a>
-        <a href="games/drift-boss/"><img src="images/driftboss.png" alt="drift boss"></a>
-        <a href="games/core-ball/"><img src="images/coreball.png" alt="core ball"></a>
-        <a href="games/wordle/"><img src="images/wordleicon.png" alt="wordle"></a>
-        <a href="games/subway-surfers/"><img src="images/subwaysurfers.png" alt="subway surfers"></a>
-        <a href="games/bad-ice-cream/"><img src="images/badice1.png" alt="bad ice cream"></a>
-        <a href="games/bad-ice-cream-3/"><img src="images/badice3.png" alt="bad ice cream 3"></a>
-        <a href="games/cell-machine/"><img src="images/cellmachine.png" alt="cell machine"></a>
-        <a href="games/cookie-clicker/"><img src="images/cookie.png" alt="cookie clicker"></a>
-        <a href="games/getaway-shootout/"><img src="images/getaway.png" alt="getaway shootout"></a>
-        <a href="games/paperio2/"><img src="images/paperio2.png" alt="paper io 2"></a>
-        <a href="games/temple-run-2/"><img src="images/templerun2.png" alt="temple run 2"></a>
-        <a href="games/tunnel-rush/"><img src="images/tunelrush.png" alt="tunnel rush"></a>
-        <a href="games/drift-hunters/"><img src="images/drifthunters.png" alt="drift hunters"></a>
-        <a href="games/ducklife4/"><img src="images/ducklife4.png" alt="duck life 4"></a>
-        <a href="games/doom/"><img src="images/doom.png" alt="doom"></a>
-        <a href="games/fnaf2/"><img src="images/fnaf2.png" alt="five nights at freddys 2"></a>
-        <a href="games/madalin-stunt-cars-2/"><img src="images/madalin-stunt-cars-2.png" alt="madalin stunt cars 2"></a>
-        <a href="games/madalin-stunt-cars-3/"><img src="images/Madalin-Stunt-Cars-3.png" alt="madalin stunt cars 3"></a>
-        <a href="games/krunker/"><img src="images/krunker.png" alt="krunker"></a>
-        <a href="games/chrome-dino/"><img src="images/dino.gif" alt="chrome dino"></a>
-        <a href="games/csgo-clicker/"><img src="images/csgoclickerBG.png" alt="csgo clicker"></a>
-        <a href="games/10-minutes-till-dawn/"><img src="images/10minstilldawn.png" alt="10 minutes till dawn"></a>
-        <a href="games/jetpack-joyride/"><img src="images/jetpackjoy.png" alt="jetpack joyride"></a>
-        <a href="games/fridaynightfunkin/"><img src="images/fnf.png" alt="friday night funkin"></a>
+            <a href="games/vex7/"><img src="images/vex7.jpeg" alt="vex 7"></a>
+            <a href="games/vex6/"><img src="images/vex6.jpeg" alt="vex 6"></a>
+            <a href="games/moto-x3m/"><img src="images/moto-x3m.jpg" alt="moto x3m"></a>
+            <a href="games/retro-bowl/"><img src="images/retro-bowl.jpg" alt="retrobowl"></a>
+            <!-- Add more games dynamically -->
         </div>
     </div>
 
-    <h2 style="color: white;">Things you see here are not final!</h2>
-    <h3 style="color: white;">v2025.x</h3>
+    <h2>Things you see here are not final!</h2>
+    <h3>v2025.x</h3>
 
     <script src="script.js"></script>
 </body>
