--- a/2025.html
+++ b/2025.html
@@ -96,7 +96,7 @@
 <body>
     <div class="topbar">
         <a href="index.html">Home</a>
-        <a href="fl-test.html">Devkit</a>
+        <a href="hdk.html">Devkit</a>
         <a href="about.html">About</a>
         <a href="#" class="disabled">Unblocked V2X</a>
     </div>
