--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
         <p>NodeJS Version: 8.0</p>
         <p>Proxy: Unreleased</p>
         <div class="button">
-            <a href="fl-test.html">Devkit</a>
+            <a href="hdk.html">HDK</a>
         </div>
     </div>
 </body>
