--- a/hdk.html
+++ b/hdk.html
@@ -2,344 +2,89 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Unblocked V2X</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-    <link rel="stylesheet" href="/main.css">
-    <style>
-        /* Basic Styling */
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            overflow-x: hidden;
-            background: linear-gradient(45deg, #5A7AFF, #5E3B8A);
-            color: white;
-        }
-
-        header {
-            background-color: #333;
-            color: white;
-            padding: 10px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        header h1 {
-            margin: 0;
-            font-size: 28px;
-            color: #5A7AFF;
-            text-shadow: 0 0 10px rgba(90, 122, 255, 0.8);
-        }
-
-        header .logo {
-            height: 50px;
-            cursor: pointer;
-        }
-
-        .search-bar {
-            display: flex;
-            align-items: center;
-        }
-
-        .search-bar input {
-            padding: 5px;
-            border: 1px solid #ccc;
-            border-radius: 3px;
-            margin-right: 5px;
-            outline: none;
-        }
-
-        .search-bar button {
-            background-color: #555;
-            color: white;
-            padding: 5px 10px;
-            border: none;
-            border-radius: 3px;
-            cursor: pointer;
-        }
-
-        .search-bar button:hover {
-            background-color: #777;
-        }
-
-        /* Grid for games */
-        main {
-            padding: 20px;
-        }
-
-        .game-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-            gap: 10px;
-            justify-content: center;
-        }
-
-        .game-item {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color: #f9f9f9;
-            padding: 10px;
-            border-radius: 10px;
-            transition: transform 0.2s ease-in-out;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-
-        .game-item:hover {
-            transform: scale(1.05);
-            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
-        }
-
-        .game-item img {
-            width: 100%;
-            height: auto;
-            max-width: 120px; /* Limit icon size */
-            object-fit: cover;
-            border-radius: 8px;
-        }
-
-        /* Footer */
-        footer {
-            padding: 20px;
-            text-align: center;
-            background-color: #333;
-            color: white;
-        }
-
-        /* Section Titles */
-        .section-title {
-            font-size: 24px;
-            margin-bottom: 10px;
-            text-align: center;
-        }
-
-        /* Search Bar Position */
-        .search-bar {
-            width: 300px;
-            margin: auto;
-            display: flex;
-            justify-content: center;
-            margin-bottom: 20px;
-        }
-    </style>
-
+    <link rel="stylesheet" href="hdk.css">
+    <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.2.0/css/all.css">
     <script>
         function redirectToRandomSite() {
-            const urls = ["https://unblockedv2.vercel.app/"];
+            const urls = [
+                "https://unblockedv2.vercel.app/hdk.html",
+            ];
             const randomIndex = Math.floor(Math.random() * urls.length);
             window.location.href = urls[randomIndex];
-        }
-
-        // Function to filter games based on search input
-        function searchGames() {
-            const searchInput = document.querySelector('.search-bar input').value.toLowerCase();
-            const games = document.querySelectorAll('.game-item');
-
-            games.forEach(game => {
-                const gameTitle = game.querySelector('img').alt.toLowerCase();
-                if (gameTitle.includes(searchInput)) {
-                    game.style.display = 'block';
-                } else {
-                    game.style.display = 'none';
-                }
-            });
         }
     </script>
 </head>
 <body>
-    <header>
-        <img src="images/icon.png" alt="logo" onclick="redirectToRandomSite()" class="logo">
+    <nav>
+        <img src="images/icon.png" alt="logo" onclick="redirectToRandomSite()">
         <h1>Unblocked V2X</h1>
+    </nav>
+
+    <div class="content">
         <div class="search-bar">
-            <input type="text" placeholder="Search..." oninput="searchGames()">
+            <input type="text" placeholder="Search games...">
             <button><i class="fas fa-search"></i></button>
         </div>
-    </header>
 
-    <main>
-        <section class="featured">
-            <h2 class="section-title">Popular Games</h2>
-            <div class="game-grid">
-                <!-- Featured Games -->
-                <a href="games/bob-the-robber-2/" class="game-item">
-                    <img src="images/bob-the-robber-2.png" alt="Bob the Robber 2">
-                </a>
-                <a href="games/vex7/" class="game-item">
-                    <img src="images/vex7.jpeg" alt="Vex 7">
-                </a>
-                <a href="games/vex6/" class="game-item">
-                    <img src="images/vex6.jpeg" alt="Vex 6">
-                </a>
-                <a href="games/drive-mad/" class="game-item">
-                    <img src="images/drive-mad.jpg" alt="Drive Mad">
-                </a>
-                <a href="games/moto-x3m/" class="game-item">
-                    <img src="images/moto-x3m.jpg" alt="Moto X3M">
-                </a>
-                <a href="games/retro-bowl/" class="game-item">
-                    <img src="images/retro-bowl.jpg" alt="Retro Bowl">
-                </a>
-            </div>
-        </section>
+        <div class="game-grid">
+            <a href="games/bob-the-robber-2/"><img src="images/bob-the-robber-2.png" alt="Bob the Robber 2"></a>
+            <a href="games/vex7/"><img src="images/vex7.jpeg" alt="Vex 7"></a>
+            <a href="games/vex6/"><img src="images/vex6.jpeg" alt="Vex 6"></a>
+            <a href="games/moto-x3m/"><img src="images/moto-x3m.jpg" alt="Moto X3M"></a>
+            <a href="games/retro-bowl/"><img src="images/retro-bowl.jpg" alt="Retro Bowl"></a>
+            <a href="games/drive-mad/"><img src="images/drive-mad.jpg" alt="Drive Mad"></a>
+            <a href="games/slope/"><img src="images/slope.jpg" alt="slope"></a>
+            <a href="games/motox3m2/"><img src="images/motox3m2.jpg" alt="moto x3m2"></a>
+            <a href="games/1v1lol/"><img src="images/1v1icon.png" alt="1v1 lol"></a>
+            <a href="games/a-dance-of-fire-and-ice/"><img src="images/adofai.png" alt="a dance of fire and ice"></a>
+            <a href="games/amongus/"><img src="images/auicon.png" alt="among us"></a>
+            <a href="games/backrooms/"><img src="images/backrooms.png" alt="backrooms"></a>
+            <a href="games/badicecream2/"><img src="images/badice2.png" alt="bad ice cream 2"></a>
+            <a href="games/baldisbasics/"><img src="images/baldi.png" alt="baldis basics"></a>
+            <a href="games/basketballstars/"><img src="images/basketballstars.png" alt="basketball stars"></a>
+            <a href="games/basketbrosio/"><img src="images/basketbros.png" alt="basketbros.io"></a>
+            <a href="games/2048/"><img src="images/2048.png" alt="2048"></a>
+            <a href="games/bitlife/"><img src="images/bitlife.png" alt="bitlife"></a>
+            <a href="games/worldshardestgame/"><img src="images/worldhardestgame.png" alt="world's hardest game"></a>
+            <a href="games/worldshardestgame2/"><img src="images/worldshardestgame2.png" alt="world's hardest game 2"></a>
+            <a href="games/slope2/"><img src="images/slope21.png" alt="slope 2"></a>
+            <a href="games/sm64/"><img src="images/sm64.png" alt="super mario 64"></a>
+            <a href="games/stickman-hook/"><img src="images/stickmanhook.png" alt="stickman hook"></a>
+            <a href="games/minecraft-18/"><img src="images/minecraft.png" alt="minecraft"></a>
+            <a href="games/drift-boss/"><img src="images/driftboss.png" alt="drift boss"></a>
+            <a href="games/core-ball/"><img src="images/coreball.png" alt="core ball"></a>
+            <a href="games/wordle/"><img src="images/wordleicon.png" alt="wordle"></a>
+            <a href="games/subway-surfers/"><img src="images/subwaysurfers.png" alt="subway surfers"></a>
+            <a href="games/bad-ice-cream/"><img src="images/badice1.png" alt="bad ice cream"></a>
+            <a href="games/bad-ice-cream-3/"><img src="images/badice3.png" alt="bad ice cream 3"></a>
+            <a href="games/cell-machine/"><img src="images/cellmachine.png" alt="cell machine"></a>
+            <a href="games/cookie-clicker/"><img src="images/cookie.png" alt="cookie clicker"></a>
+            <a href="games/getaway-shootout/"><img src="images/getaway.png" alt="getaway shootout"></a>
+            <a href="games/paperio2/"><img src="images/paperio2.png" alt="paper io 2"></a>
+            <a href="games/temple-run-2/"><img src="images/templerun2.png" alt="temple run 2"></a>
+            <a href="games/tunnel-rush/"><img src="images/tunelrush.png" alt="tunnel rush"></a>
+            <a href="games/drift-hunters/"><img src="images/drifthunters.png" alt="drift hunters"></a>
+            <a href="games/ducklife4/"><img src="images/ducklife4.png" alt="duck life 4"></a>
+            <a href="games/doom/"><img src="images/doom.png" alt="doom"></a>
+            <a href="games/fnaf2/"><img src="images/fnaf2.png" alt="five nights at freddys 2"></a>
+            <a href="games/madalin-stunt-cars-2/"><img src="images/madalin-stunt-cars-2.png" alt="madalin stunt cars 2"></a>
+            <a href="games/madalin-stunt-cars-3/"><img src="images/Madalin-Stunt-Cars-3.png" alt="madalin stunt cars 3"></a>
+            <a href="games/krunker/"><img src="images/krunker.png" alt="krunker"></a>
+            <a href="games/chrome-dino/"><img src="images/dino.gif" alt="chrome dino"></a>
+            <a href="games/csgo-clicker/"><img src="images/csgoclickerBG.png" alt="csgo clicker"></a>
+            <a href="games/10-minutes-till-dawn/"><img src="images/10minstilldawn.png" alt="10 minutes till dawn"></a>
+            <a href="games/jetpack-joyride/"><img src="images/jetpackjoy.png" alt="jetpack joyride"></a>
+            <a href="games/fridaynightfunkin/"><img src="images/fnf.png" alt="friday night funkin"></a>
+        </div>
 
-        <section class="all-games">
-            <h2 class="section-title">All Games</h2>
-            <div class="game-grid">
-                <!-- All Games -->
-                <a href="games/bob-the-robber-2/" class="game-item">
-                    <img src="images/bob-the-robber-2.png" alt="Bob the Robber 2">
-                </a>
-                <a href="games/vex7/" class="game-item">
-                    <img src="images/vex7.jpeg" alt="Vex 7">
-                </a>
-                <a href="games/vex6/" class="game-item">
-                    <img src="images/vex6.jpeg" alt="Vex 6">
-                </a>
-                <a href="games/moto-x3m/" class="game-item">
-                    <img src="images/moto-x3m.jpg" alt="Moto X3M">
-                </a>
-                <a href="games/retro-bowl/" class="game-item">
-                    <img src="images/retro-bowl.jpg" alt="Retro Bowl">
-                </a>
-                <a href="games/drive-mad/" class="game-item">
-                    <img src="images/drive-mad.jpg" alt="Drive Mad">
-                </a>
-                <a href="games/slope/" class="game-item">
-                    <img src="images/slope.jpg" alt="Slope">
-                </a>
-                <a href="games/motox3m2/" class="game-item">
-                    <img src="images/motox3m2.jpg" alt="Moto X3M 2">
-                </a>
-                <a href="games/1v1lol/" class="game-item">
-                    <img src="images/1v1icon.png" alt="1v1 LOL">
-                </a>
-                <a href="games/a-dance-of-fire-and-ice/" class="game-item">
-                    <img src="images/adofai.png" alt="A Dance of Fire and Ice">
-                </a>
-                <a href="games/amongus/" class="game-item">
-                    <img src="images/auicon.png" alt="Among Us">
-                </a>
-                <a href="games/backrooms/" class="game-item">
-                    <img src="images/backrooms.png" alt="Backrooms">
-                </a>
-                <a href="games/badicecream2/" class="game-item">
-                    <img src="images/badice2.png" alt="Bad Ice Cream 2">
-                </a>
-                <a href="games/baldisbasics/" class="game-item">
-                    <img src="images/baldi.png" alt="Baldi's Basics">
-                </a>
-                <a href="games/basketballstars/" class="game-item">
-                    <img src="images/basketballstars.png" alt="Basketball Stars">
-                </a>
-                <a href="games/basketbrosio/" class="game-item">
-                    <img src="images/basketbros.png" alt="Basketbros.io">
-                </a>
-                <a href="games/2048/" class="game-item">
-                    <img src="images/2048.png" alt="2048">
-                </a>
-                <a href="games/bitlife/" class="game-item">
-                    <img src="images/bitlife.png" alt="Bitlife">
-                </a>
-                <a href="games/worldshardestgame/" class="game-item">
-                    <img src="images/worldhardestgame.png" alt="World's Hardest Game">
-                </a>
-                <a href="games/worldshardestgame2/" class="game-item">
-                    <img src="images/worldshardestgame2.png" alt="World's Hardest Game 2">
-                </a>
-                <a href="games/slope2/" class="game-item">
-                    <img src="images/slope21.png" alt="Slope 2">
-                </a>
-                <a href="games/sm64/" class="game-item">
-                    <img src="images/sm64.png" alt="Super Mario 64">
-                </a>
-                <a href="games/stickman-hook/" class="game-item">
-                    <img src="images/stickmanhook.png" alt="Stickman Hook">
-                </a>
-                <a href="games/minecraft-18/" class="game-item">
-                    <img src="images/minecraft.png" alt="Minecraft">
-                </a>
-                <a href="games/drift-boss/" class="game-item">
-                    <img src="images/driftboss.png" alt="Drift Boss">
-                </a>
-                <a href="games/core-ball/" class="game-item">
-                    <img src="images/coreball.png" alt="Core Ball">
-                </a>
-                <a href="games/wordle/" class="game-item">
-                    <img src="images/wordleicon.png" alt="Wordle">
-                </a>
-                <a href="games/subway-surfers/" class="game-item">
-                    <img src="images/subwaysurfers.png" alt="Subway Surfers">
-                </a>
-                <a href="games/bad-ice-cream/" class="game-item">
-                    <img src="images/badice1.png" alt="Bad Ice Cream">
-                </a>
-                <a href="games/bad-ice-cream-3/" class="game-item">
-                    <img src="images/badice3.png" alt="Bad Ice Cream 3">
-                </a>
-                <a href="games/cell-machine/" class="game-item">
-                    <img src="images/cellmachine.png" alt="Cell Machine">
-                </a>
-                <a href="games/cookie-clicker/" class="game-item">
-                    <img src="images/cookie.png" alt="Cookie Clicker">
-                </a>
-                <a href="games/getaway-shootout/" class="game-item">
-                    <img src="images/getaway.png" alt="Getaway Shootout">
-                </a>
-                <a href="games/paperio2/" class="game-item">
-                    <img src="images/paperio2.png" alt="Paper IO 2">
-                </a>
-                <a href="games/temple-run-2/" class="game-item">
-                    <img src="images/templerun2.png" alt="Temple Run 2">
-                </a>
-                <a href="games/tunnel-rush/" class="game-item">
-                    <img src="images/tunelrush.png" alt="Tunnel Rush">
-                </a>
-                <a href="games/drift-hunters/" class="game-item">
-                    <img src="images/drifthunters.png" alt="Drift Hunters">
-                </a>
-                <a href="games/ducklife4/" class="game-item">
-                    <img src="images/ducklife4.png" alt="Duck Life 4">
-                </a>
-                <a href="games/doom/" class="game-item">
-                    <img src="images/doom.png" alt="Doom">
-                </a>
-                <a href="games/fnaf2/" class="game-item">
-                    <img src="images/fnaf2.png" alt="Five Nights at Freddy's 2">
-                </a>
-                <a href="games/madalin-stunt-cars-2/" class="game-item">
-                    <img src="images/madalin-stunt-cars-2.png" alt="Madalin Stunt Cars 2">
-                </a>
-                <a href="games/madalin-stunt-cars-3/" class="game-item">
-                    <img src="images/Madalin-Stunt-Cars-3.png" alt="Madalin Stunt Cars 3">
-                </a>
-                <a href="games/krunker/" class="game-item">
-                    <img src="images/krunker.png" alt="Krunker">
-                </a>
-                <a href="games/chrome-dino/" class="game-item">
-                    <img src="images/dino.gif" alt="Chrome Dino">
-                </a>
-                <a href="games/csgo-clicker/" class="game-item">
-                    <img src="images/csgoclickerBG.png" alt="CSGO Clicker">
-                </a>
-                <a href="games/10-minutes-till-dawn/" class="game-item">
-                    <img src="images/10minstilldawn.png" alt="10 Minutes Till Dawn">
-                </a>
-                <a href="games/jetpack-joyride/" class="game-item">
-                    <img src="images/jetpackjoy.png" alt="Jetpack Joyride">
-                </a>
-                <a href="games/fridaynightfunkin/" class="game-item">
-                    <img src="images/fnf.png" alt="Friday Night Funkin">
-                </a>
-            </div>
-        </section>
-    </main>
+        <footer>
+            <p>v2025.x</p>
+        </footer>
+    </div>
 
-    <footer>
-        <p>Unblocked V2X</p>
-        <h2 style=“color: white;”>Things you see here are not final!</h2>
-        <h3 style=“color: white;”>v2025.x</h3>
-    </footer>
+    <script src="script.js"></script>
 </body>
 </html>
